kustomize/overlays/dev/biocheck-ingress.yaml
# ingress for gateway
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vcell-ingress
  labels:
    app: vcell-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - minikube.local
      secretName: selfsigned-cert-tls
  rules:
    - host: minikube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: biochecknet-gateway
                port:
                  number: 3001
